# realtime_data

./: Makefile  docker-compose.yml
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json
dashboard/src/: index.js
dashboard/src/components/RealtimePlot/: index.jsx
dashboard/src/pages/Dashboard/: index.jsx  style.scss
services/: clickhouse.Dockerfile  docker-compose.yml  entrypoint.sh  init-db.sh  kafka.xml  pyproject.toml  services.Dockerfile
services/src/common/: settings.py  typedef.py  utils.py
services/src/generator/: __main__.py  generator.py  settings.py
services/src/service/: app.py  handler.py  receiver.py  settings.py  typedef.py
